refactor(codegen): 优化服务代码生成器实现
- 修复方法名拼写错误 removeNotNullionAnnotations 改为 removeNotNullAnnotations
- 更新代码收集方式 使用 toList() 替代 collect(Collectors.toList())
- 调整字段范围查询命名规则 从 min/max 前缀改为 Min/Max 后缀
- 整理导入包顺序 添加空行分隔依赖包